Fixed visibility problem where start button took up too much space

--- a/sub-sites/styles-poke-battle.css
+++ b/sub-sites/styles-poke-battle.css
@@ -15,7 +15,7 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 	align-items: flex-start;
-	visibility: hidden;
+	display: none;
 }
 .left-side {
 	width: 50%;
@@ -36,15 +36,20 @@
 	height: 15%;
 	width: auto;
 	padding: 1%;
-	visibility: hidden;
+	display: none;
 }
 .moves-area {
 	width: 100%;
 	height: 10%;
 	display: flex;
 	justify-content: space-between;
-	visibility: hidden;
+	display: none;
 }	
+.start-button {
+	width: 100px;
+	height: 50px;
+	margin-top: 200px;
+}
 .move-button {
 	width: 24%;
 	text-align: center;
